[tool.poetry]
name = "emake"
version = "1.0.1"
description = "Easy wrapper around CMake's CLI"
authors = ["Jon Palmisciano <jp@jonpalmisc.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/jonpalmisc/emake"

[tool.poetry.scripts]
emake = "emake.cli.emake:main"
econf = "emake.cli.econf:main"

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
tomli = {version = "^2.0.1", python = "<3.11"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
