[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emake"
version = "1.3.1"
description = "Easy wrapper around CMake's CLI"
authors = [{name = "Jon Palmisciano", email = "jp@jonpalmisc.com"}]
readme = "README.md"
license = {file = "LICENSE.txt"}

requires-python = ">= 3.10"
dependencies = [
  "docopt",
  "python-benedict",
  "tomli"
]

[project.urls]
Repository = "https://github.com/jonpalmisc/emake"

[project.scripts]
emake = "emake.cli.emake:main"
econf = "emake.cli.econf:main"
